--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,53 @@
 body {
     margin: 0;
     padding: 0;
+    font-size: 16px;
+    background: url('http://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Gems_P4061909.jpg/1024px-Gems_P4061909.jpg')
+                no-repeat top center #fff;
+    background-size: cover;
+}
+
+.gem-puzzle {
+    position: relative;
+    max-width: 900px;
+    margin: 30px auto;
+}
+
+.gem-message {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3em;
+    margin: 0;
+    text-align: center;
+    color: #fff;
+    padding: 30px;
+    background: rgba(0, 50, 100, 0.8);
+    border-radius: 8px;
+}
+
+.gem-button {
+    font-size: 0.5em;
+    margin-top: 20px;
+    padding: 6px 12px;
+    border: 1px solid #333;
+    border-radius: 4px;
+    background: #61D9D6;
 }
 
 .gem-grid {
     width: 512px;
     height: 512px;
-    margin: 30px auto;
+    background: rgba(0, 50, 100, 0.25);
+    border-radius: 8px;
+    padding: 5px;
 }
 
 .gem-cell {
     float: left;
+    position: relative;
 }
 
 .gem-cell:nth-child(8n + 1) {
@@ -18,7 +55,7 @@ body {
 }
 
 .gem-cell_animated.ng-enter {
-    transition: transform 300ms;
+    transition: transform 100ms ease-in;
     transform: translateY(-100%);
 }
 
@@ -45,8 +82,8 @@ body {
 .gem__svg {
     width: 100%;
     height: 100%;
-    transition: opacity linear 300ms,
-                transform linear 300ms;
+    transition: opacity 300ms ease-out,
+                transform 300ms ease-out;
 }
 
 .gem_highlight_true .gem__svg {
@@ -60,30 +97,71 @@ body {
 }
 
 .gem__polygon {
-    stroke-width: 4px;
+    stroke-width: 8px;
+    stroke: #fff;
 }
 
 .gem_color_red .gem__polygon {
     fill: #F04333;
-    stroke: #B9121B;
 }
 
 .gem_color_green .gem__polygon {
     fill: #8BE66A;
-    stroke: #00A99D;
 }
 
 .gem_color_blue .gem__polygon {
     fill: #61D9D6;
-    stroke: #004FBD;
 }
 
 .gem_color_violet .gem__polygon {
     fill: #E80CF0;
-    stroke: #723147;
 }
 
 .gem_color_yellow .gem__polygon {
     fill: #FF8C27;
-    stroke: #F15A24;
+}
+
+.gem-grid_game-over_true {
+    -webkit-filter: grayscale(70%);
+}
+
+.gem-stats {
+    position: absolute;
+    z-index: 1;
+    left: 550px;
+    right: 0;
+    top: 0;
+    font-size: 1.5em;
+    color: #fff;
+    padding: 0 30px;
+    background: rgba(0, 50, 100, 0.5);
+    border-radius: 8px;
+}
+
+.gem-stats ul {
+    padding-left: 0;
+}
+
+.gem-stats li {
+    margin-bottom: 0.5em;
+}
+
+.gem-count {
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    color: #fff;
+    text-shadow: 0 0 2px #333;
+    font-size: 10em;
+    transform: translate(-50%, -50%) scale(0.1);
+    transition: opacity 300ms ease-out,
+                transform 300ms ease-out;
+    opacity: 0;
+}
+
+
+.gem-count.ng-hide-remove-active {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0.5;
 }
