--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,47 @@
 body {
-    margin: 10px auto;
-    max-width: 900px;
+    padding: 10px;
+    margin: auto;
+}
+
+@media (min-width: 1000px) {
+    body {
+        max-width: 900px;
+    }
+}
+
+.gem-puzzle {
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.gem-panel {
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 30px;
+}
+
+.gem-board {
+    flex: 7;
+    min-width: 480px;
+    margin-bottom: 10px;
+}
+
+.gem-grid {
+    overflow: hidden;
+    width: 480px;
+    margin: auto;
+}
+
+.gem-cell {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    float: left;
+}
+
+.gem-cell:nth-child(8n+1) {
+    clear: left;
 }
 
 .gem-cell_animated.ng-enter {
@@ -25,19 +66,19 @@ body {
     animation: spin 20s infinite linear;
 }
 
-md-grid-tile:nth-child(2n) .gem {
+.gem-cell:nth-child(2n) .gem {
     animation-direction: reverse;
 }
 
-md-grid-tile:nth-child(2n+1).gem {
+.gem-cell:nth-child(2n+1).gem {
     animation-delay: 300ms;
 }
 
-md-grid-tile:nth-child(2n+2) .gem {
+.gem-cell:nth-child(2n+2) .gem {
     animation-delay: 450ms;
 }
 
-md-grid-tile:nth-child(2n+3) .gem {
+.gem-cell:nth-child(2n+3) .gem {
     animation-delay: 600ms;
 }
 
@@ -101,12 +142,54 @@ md-grid-tile:nth-child(2n+3) .gem {
     opacity: 0;
 }
 
-
 .gem-count.ng-hide-remove-active {
     transform: translate(-50%, -50%) scale(1);
     opacity: 0.5;
 }
 
+.gem-stats {
+    flex: 3;
+    margin-left: 2em;
+    white-space: nowrap;
+}
+
 .gem-stats h2 {
     margin-top: 0;
+}
+
+.gem-stats ul {
+    padding-left: 1em;
+}
+
+.gem-dialog {
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    text-align: center;
+    font-size: 2em;
+    padding: 2em;
+}
+
+.gem-dialog_animated.ng-enter {
+    transition: transform 300ms ease-in;
+    transform: scale(0.1);
+}
+
+.gem-dialog_animated.ng-enter.ng-enter-active {
+    transform: none;
+}
+
+.gem-dialog h2 {
+    margin-top: 0;
+}
+
+.gem-dialog button {
+    font-size: 1em;
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 0.2em 0.4em;
 }
